refactor: Migrate services to use AdminUserService and enhance case data handling